--- a/templates/widgets/doctors_cards.html
+++ b/templates/widgets/doctors_cards.html
@@ -14,8 +14,8 @@
                     <div class="w-100">
                         <p class="user-follow-info doc-info">{{ doc.specialty }}</p>
                         <p class="user-experience mt-1 doc-info">Стаж: {{ doc.experience }}р.</p>
-                        <p class="center mt-4 doc-info"><span class="fa fa-star checked star"></span> 4.9 (83) <span
-                                class="fa-solid fa-user"></span></p>
+                        {% comment %} <p class="center mt-4 doc-info"><span class="fa fa-star checked star"></span> 4.9 (83) <span
+                                class="fa-solid fa-user"></span></p> {% endcomment %}
                     </div>
                 </div>
 
