--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,28 +3,17 @@
 <!DOCTYPE html>
 <html lang="uk">
 <head>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
 
-
-    <link
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-            rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;700;800&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"/>
-    <!-- Google Fonts -->
-    <link
-            href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
-            rel="stylesheet"
-    />
-    <!-- MDB -->
-    <link
-            href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.2.0/mdb.min.css"
-            rel="stylesheet"
-    />
-
-    <link
-            rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.2.0/mdb.min.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="{% static "css/style.css" %}">
     <link rel="stylesheet" href="{% static "css/messages.css" %}">
     <link rel="stylesheet" href="{% static "css/slider.css" %}">
@@ -48,21 +37,19 @@
 {% include "widgets/btn_up.html" %}
 
 
-<script
-        type="text/javascript"
-        src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.2.0/mdb.min.js"
+<script type="text/javascript"src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.2.0/mdb.min.js"
 ></script>
 <script src="https://kit.fontawesome.com/89c5ec43ed.js" crossorigin="anonymous"></script>
-{% block js %}{% endblock %}
-<script src="{% static "js/wow.min.js" %}"></script>
-<script src="{% static "js/main.js" %}"></script>
-<script src="{% static "js/input.js" %}"></script>
-<script src="{% static 'js/btn_up.js' %}"></script>
-<script src="{% static 'js/msg.js' %}"></script>
-<script src="{% static 'js/sections.js' %}"></script>
 
+<script src="{% static "js/wow.min.js" %}"> </script>
+<script src="{% static "js/main.js" %}"> </script>
+<script src="{% static "js/input.js" %}"> </script>
+<script src="{% static 'js/btn_up.js' %}"> </script>
+<script src="{% static 'js/msg.js' %}"> </script>
+<script src="{% static 'js/sections.js' %}"> </script>
+
+{% block js %} {% endblock %}
 </body>
-
 </html>
 
 
